--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/index.js",
+    "dev": "npx nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
@@ -12,6 +13,7 @@
   "dependencies": {
     "@faker-js/faker": "^8.2.0",
     "express": "^4.18.2",
+    "morgan": "^1.10.0",
     "mysql2": "^3.6.2",
     "sequelize": "^6.33.0"
   },
